# madupite

./: .clang-format  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Filewriter.h  LICENSE  MANIFEST.in  MDP.cpp  MDP.h  Makefile  PETScFunctions.h  README.md  README.rst  StageCostGenerator.h  TransitionMatrixGenerator.h  environment.yml  euler-launch.sh  euler_module_load.sh  example.py  fix-petsc-err-handling.py  generatePetscSparseMatBinary.py  get_transitionProbabilies_costs.ipynb  input.txt  load-euler-modules.sh  main.cpp  main.ipynb  main.py  makefile_rules  makefile_variables  mdp.py  petsc-env-conda  petsc-env.example  petsc_options.txt  plot.py  pyproject.toml  run.sh  setup copy.py  setup.py  (+1 more)
.github/workflows/: ci-pipeline.yml
AirTrafficControl/: get_transitionProbabilies_costs.ipynb  node2num_dict.pickle  num2node_dict.pickle  petsc_options.txt  policy_postprocessing.ipynb  save_matrix.py  util.py
GrowthModel/: GrowthModel.cpp  GrowthModel.h  main.cpp  main.py  mdp.py  petsc_options.txt
InfectiousDiseaseModel/: InfectiousDiseaseModel.cpp  InfectiousDiseaseModel.h  VisualizeProbCost.ipynb  main.cpp  main.py  petsc_options.txt
MDP/: MDP.cpp  MDP.h  MDP.pxd  MDP.pyx  MDP_algorithm.cpp  MDP_change.cpp  MDP_setup.cpp
OLD-euler/DiscountFactor/: run_benchmark_GM.py
OLD-euler/SolverType/: run_benchmark_GM.py  run_benchmark_IDM.py
archive/GrowthModel/: main.py
archive/InfectiousDiseaseModel/: VisualizeProbCost.ipynb  main.py
archive/OLD-euler/ProblemSize/: launch_release.sh  run_benchmark_GM.py
archive/OLD-euler/SolverType/: launch_release.sh
archive/OLD-euler/StrongScaling/: launch_release.sh  launch_release2.sh
archive/cpp-Eigen-implementation/: MDP.h  Timer.h  main.cpp  plot.py
archive/petsc/: Filewriter.h  PETScFunctions.h  StageCostGenerator.h
archive/plot_old/: GrowthModel.py  SolverType_GM.py
archive/python-numpy-implementation/: eigenvalue_distribution.py  generatePetscSparseMatBinary.py  main.py  mdp.py  petsc_validator.py  plot.py  saveArrays.py  testGreedyPolicy.py
benchmarks/: plot_MDP.ipynb  plot_util.py
benchmarks/MPI/: launch_release.sh  plot.py  run_benchmark_GM.py
benchmarks/SolverTolerance/: launch_release.sh  plot.py  run_benchmark_ATC.py  run_benchmark_GM.py  run_benchmark_IDM.py  run_benchmark_MDP.py
benchmarks/SolverType/: launch_release.sh  plot.py  run_benchmark_ATC.py
benchmarks/SolverType_Discount/: launch_release.sh  plot.py  run_benchmark_ATC.py  run_benchmark_GM.py  run_benchmark_IDM.py  run_benchmark_MDP.py
benchmarks/SolverType_Size/: launch_release.sh  plot.py  run_benchmark_GM.py  run_benchmark_IDM.py  run_benchmark_MDP.py
benchmarks/StrongScaling/: launch_release.sh  run_benchmark_ATC.py  run_benchmark_GM.py  run_benchmark_IDM.py  run_benchmark_MDP.py
docs/: Doxyfile  algorithm.rst  apiref.rst  benchmarks.rst  conf.py  examples.rst  index.rst  install.rst  metadatatemplate.json  options.rst  optionstemplate.json  tutorial.rst  tutorial_old.rst
docs/_build/doctrees/: apiref.doctree  benchmarks.doctree  environment.pickle  index.doctree  install.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  apiref.html  benchmarks.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
docs/_build/html/_sources/: apiref.rst.txt  tutorial.rst.txt
euler/: launch.sh  run_benchmark.py  run_benchmark_GM.py  run_benchmark_IDM.py  run_benchmark_MDP.py
euler/DiscountFactor/: launch_release.sh
euler/SolverType/: run_benchmark_MDP.py
euler/StrongScaling/: launch.sh  run_benchmark_GM.py  run_benchmark_IDM.py  run_benchmark_IDM2.py  run_benchmark_MDP.py
example/: example.cpp  example.py  idm.py  main.py  petsc_options.txt  run.sh
examples/: CMakeLists.txt
examples/StrongScaling/: job.sh  launch.sh  pendulum.cpp  plot_pendulum.py
examples/ci_test/: CMakeLists.txt  Makefile  ci_policy.out  ci_policy_fromfile.out  ci_reward.out  ci_reward_fromfile.out  ci_stats.json  ci_stats_fromfile.json  ci_test.cpp  ci_test.py  mpi_test.py  plot.ipynb
examples/double-integrator/: CMakeLists.txt  double-integrator.cpp  double-integrator.ipynb  double-integrator.py  old_double-integrator.ipynb
examples/euler/: README.md  euler-load-modules.sh
examples/example/: example.cpp  example.py  idm.py  main.py  run.sh
examples/infectious-disease/: infectious-disease.ipynb  infectious_disease.py
examples/install/: main.py
examples/maze/: CMakeLists.txt  maze.cpp  maze.ipynb
examples/pendulum/: CMakeLists.txt  compute_pendulum.py  euler-launch.sh  generate_pendulum_data.py  madupite_pendulum.py  old_pendulum.ipynb  pendulum.cpp  pendulum.ipynb  pendulum.py  plot_pendulum.py
examples/tutorial/: ex1.py  ex2.py  ex2_data_generation.py
examples/unit_tests/: CMakeLists.txt  test_matrix.cpp  tests.cpp
include/: JsonWriter.h  MDP.h  MDP_matrix.h  madupite_errors.h  madupite_layout.h  madupite_matrix.h  madupite_vector.h  mdp.h  mdp_matrix.h  utils.h
include/MDP/: MDP_setup.tpp
joss/: paper.bib  paper.md
madupite/: __init__.py  madupite.cpp  madupite.pyx
plot/: IDM_policy.py  ProblemSize.py  SolverType_IDM.py  plot.py  strong_scaling.py
plot_old/: DiscountFactor.py  SolverType_MDP.py
python/: CMakeLists.txt  pymadupite.cpp
result_31_20_0.7/: out.txt  plot.py  res_OPI.txt  res_PI.txt  res_VI.txt  runtimes.txt
src/: CMakeLists.txt  MDP_matrix.cpp  MDP_setup.cpp  madupite_matrix.cpp  mdp_algorithm.cpp  mdp_matrix.cpp  mdp_setup.cpp  pymadupite.cpp  utils.cpp
src/MDP/: MDP_algorithm.cpp  MDP_change.cpp  MDP_matrix.cpp  MDP_setup.cpp  MDP_setup.tpp  Makefile  madupite_matrix.cpp  madupite_vector.cpp
src/madupite/: __init__.py  __init__.pyi  util.py
test/: ci_test.cpp  plot.ipynb
tests/: unit_tests.cpp  unit_tests.py
utils/: JsonWriter.h  Logger.cpp  Logger.h  log_view_analysis.py
vscode.example/: README.md  launch.json  run_make.sh  settings.json  tasks.json
